2009-05-09  Miguel de Icaza  <miguel@novell.com>

	* mono-value-hash.c (mono_value_hash_table_insert_replace):
	Initialize variable, to quiet the compiler. 

	* mono-proclib.c: Eliminate two warnings.

2009-04-03  Miguel de Icaza  <miguel@novell.com>

	* mono-filemap.c: Move mono_file_unmap for the not-mmap case to
	the mono-filemap.c file so it can be plugged in platform-specific
	code as well. 

2009-04-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* strenc.h:
	* strenc.c: Add mono_utf8_validate_and_len_with_bounds.

2009-03-23  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (libmonoutils_la_SOURCES): Fix make dist.

2009-03-22  Zoltan Varga  <vargaz@gmail.com>

	* gc_wrapper.h: Disable thread local allocation for ARM too because of
	incomplete support in libgc.

2009-03-20  Zoltan Varga  <vargaz@gmail.com>

	* gc_wrapper.h: New file, moved from ../os.

	* Makefile.am: Add gc_wrapper.h

2009-03-06  Zoltan Varga  <vargaz@gmail.com>

	* mono-hash.c: Use precise GC allocation for the Boehm GC as well.

2009-02-16  Mark Probst  <mark.probst@gmail.com>

	Contributed under the terms of the MIT/X11 license by Steven
	Munroe <munroesj@us.ibm.com>.

	* mono-compiler.h: MONO_THREAD_VAR_OFFSET for PPC(64).

2009-02-11  Bill Holmes  <billholmes54@gmail.com>

	* mono-filemap.c : Fixing the MSVC build.

	Contributed under MIT/X11 license.

2009-02-03  Miguel de Icaza  <miguel@novell.com>

	* mono-dl.c: Add support for registering in-proc addresses as
	libraries that can be P/Invoked.   Used in operating systems that
	lack a dynamic linker. 

	* mono-filemap.c: Integrate Paolo's mono-filemap code here, split
	some code from mono-mmap. into this file to ease porting.

	* mono-io-portability.c: Use new define to turn off portability
	features. 

2009-01-25  Zoltan Varga  <vargaz@gmail.com>

	* mono-compiler.h (MONO_THREAD_VAR_OFFSET): Add ARM Linux support.

2009-01-21  Zoltan Varga  <vargaz@gmail.com>

	* mono-mmap.c: Applied patch from Koushik Dutta